@@ -24,7 +24,10 @@
  - Fixed xtext race condition [678874].
  - Added ability to show/hide the channel-mode buttons.
  - Use the network name in server-tab rather than full hostname.
- - 
+ - Added keybindings for moving tab-families, default is ctrl-shift
+   prior and next (Vincent Ho).
+ - Added 'Beep on highlighted messages' option (Jirka Kosina).
+ - Detatch when dragging tabs.
  - 
  - 
 
